@startuml JabberPoint

interface CommandLineRunner {
  void run()
}

class JabberPointApplication {
  #{static} String IOERR
  #{static} String JABERR
  #{static} String JABVERSION

  +{static} void main()
  + void run()
}

class JabberPointApplication implements CommandLineRunner

class AboutBox {
  +{static} void show()
}

abstract class Accessor {
  + {static} String DEMO_NAME
  + {static} String DEFAULT_EXTENSION
  + {static} Acessor getDemoAccessor()
  + Acessor()
  + {abstract} void loadFile()
  + {abstract} void saveFile()
}

class Slide {
  + {static} int WIDTH
  + {static} int HEIGHT
  # TextItem title
  # Vector<SlideItem> items
  + Slide()
  + void append()
  + String getTitle()
  + void setTitle()
  + SlideItem getSlideItem()
  + Vector<SlideItem> getSlideItems()
  + int getSize()
  + void draw()
  - float getScale()
}

abstract class SlideItem {
  - int level
  + SlideItem()
  + int getLevel()
  + {abstract} Rectangle getBoundingBox()
  + {abstract} void draw()
}

abstract class JComponent
abstract class JFrame

class SlideViewerComponent {
  - {static} long serialVersionUID
  - {static} Color BGCOLOR
  - {static} Color COLOR
  - {static} String FONTNAME
  - {static} int FONTSTYLE
  - {static} int FONTHEIGHT
  - {static} int XPOS
  - {static} int YPOS
  - Slide slide
  - Font labelFont
  - Presentation presentation
  - JFrame frame

  + SlideViewerComponent()
  + Dimension getPreferredSize()
  + void update()
  + void paintComponent()
}

class SlideViewerComponent extends JComponent

class SlideViewerFrame {
  - {static} long serialVersionUID
  - {static} String JABTITLE
  + {static} int WIDTH
  + {static} int HEIGHT
  + SlideViewerFrame()
  + void setupWindow()
}

class SlideViewerFrame extends JFrame

class Style {
  - {static} Style[] styles
  - {static} String FONTNAME
  int indent
  Color color
  Font font
  int fontSize
  int leading

  + {static} void createStyles()
  + {static} Style getStyle()
  + Style()
  + String toString()
  + Font getFont()
}

class TextItem {
  - String text
  - {static} String EMPTYTEXT
  + TextItem()
  + String getText()
  + AttributedString getAttributedString()
  + Rectangle getBoundingBox()
  + void draw()
  - List<TextLayout> getLayouts()
  + String toString()
}

class TextItem extends SlideItem

class XMLAccessor {
  # {static} String DEFAULT_API_TO_USE
  # {static} String SHOWTITLE
  # {static} String SLIDETITLE
  # {static} String SLIDE
  # {static} String ITEM
  # {static} String LEVEL
  # {static} String KIND
  # {static} String TEXT
  # {static} String IMAGE
  # {static} String PCE
  # {static} String UNKNOWNTYPE
  # {static} String NFE

  - String getTitle()
  + void loadFile()
  # void loadSlideItem()
  + void saveFile()
}

class XMLAccessor extends Accessor

class BitmapItem {
  - BufferedImage bufferedImage
  - String imageName
  # {static} String FILE
  # {static} String NOTFOUND

  + BitmapItem()
  + String getName()
  + Rectangle getBoundingBox()
  + void draw()
  + String toString()
}

class BitmapItem extends SlideItem

class DemoPresentation {
  + void loadFile()
  + void saveFile()
}

class DemoPresentation extends Accessor

abstract class KeyAdapter

class KeyController {
  - Presentation presentation
  + KeyController()
  + void keyPressed()
}

class KeyController extends KeyAdapter

class MenuBar

class MenuController {
  - {static} long serialVersionUID
  - Frame parent
  - Presentation presentation
  # {static} String ABOUT
  # {static} String FILE
  # {static} String EXIT
  # {static} String GOTO
  # {static} String HELP
  # {static} String NEW
  # {static} String NEXT
  # {static} String OPEN
  # {static} String PAGENR
  # {static} String PREV
  # {static} String SAVE
  # {static} String VIEW
  # {static} String TESTFILE
  # {static} String SAVEFILE
  # {static} String IOEX
  # {static} String LOADERR
  # {static} String SAVEERR

  + MenuController()
  + MenuItem mkMenuItem()
}

class MenuController extends MenuBar

class Presentation {
  - String title
  - ArrayList<Slide> showList
  - SlideViewerComponent slideViewComponent
  - int currentSlideNumber

  + Presentation()
  + int getSize()
  + String getTitle()
  + void setTitle()
  + void setShowView()
  + int getSlideNumber()
  + void setSlideNumber()
  + void prevSlide()
  + void nextSlide()
  void clear()
  + void append()
  + Slide getSlide()
  + Slide getCurrentSlide()
  + void exit()
}

' Relações
Slide "1" *-- "0..*" SlideItem : contains
Slide "1" *-- "0..*" SlideViewerComponent : contains
SlideViewerComponent "1" *-- "1" Presentation : contains
Presentation "1" *-- "1..*" Slide : contains
Presentation "1" *-- "1" DemoPresentation : contains
KeyController "1" *-- "1" Presentation : contains
MenuController "1" *-- "1" Presentation : contains
MenuController o-- AboutBox : aggregation
MenuController *-- Accessor : contains
JabberPointApplication o-- Accessor : aggregation
Slide o-- Style : aggregation
SlideItem o-- Style : aggregation
SlideViewerComponent o-- Style : aggregation
Presentation o-- Style : aggregation

@enduml
